@@ -42,6 +42,7 @@ class CControllerWidgetHostsView extends CController {
 			'groupids' => null,
 			'maintenance' => null,
 			'severity' => null,
+			'trigger_name' => '',
 			'extAck' => 0
 		];
 
@@ -97,6 +98,7 @@ class CControllerWidgetHostsView extends CController {
 			$severity = CProfile::get('web.dashconf.triggers.severity', null);
 			$filter['severity'] = zbx_empty($severity) ? null : explode(';', $severity);
 			$filter['severity'] = zbx_toHash($filter['severity']);
+			$filter['trigger_name'] = CProfile::get('web.dashconf.triggers.name', '');
 
 			$filter['extAck'] = $config['event_ack_enable'] ? CProfile::get('web.dashconf.events.extAck', 0) : 0;
 		}
