@@ -40,6 +40,7 @@ class CControllerWidgetIssuesView extends CController {
 			'groupids' => null,
 			'maintenance' => null,
 			'severity' => null,
+			'trigger_name' => '',
 			'extAck' => 0,
 			'backUrl' => 'zabbix.php?action=dashboard.view'
 		];
@@ -96,6 +97,7 @@ class CControllerWidgetIssuesView extends CController {
 			$severity = CProfile::get('web.dashconf.triggers.severity', null);
 			$filter['severity'] = zbx_empty($severity) ? null : explode(';', $severity);
 			$filter['severity'] = zbx_toHash($filter['severity']);
+			$filter['trigger_name'] = CProfile::get('web.dashconf.triggers.name', '');
 
 			$config = select_config();
 			$filter['extAck'] = $config['event_ack_enable'] ? CProfile::get('web.dashconf.events.extAck', 0) : 0;
